# maven-starter

./: README.md  combine_code.sh  combined_backend.txt  combined_frontend.txt
backend/: hexdocs.db  pyproject.toml
backend/app/: __init__.py  database.py  main.py  schemas.py  scraper.py
frontend/: bun.lockb  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
