[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nheingit <60185486+nheingit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
openai = "^1.46.1"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
